# radio

./: Cargo.toml  README.md  get_notifies.sh
fsapi/: Cargo.toml
fsapi/src/: error.rs  lib.rs  macros.rs
fsapi/src/error/: internal.rs
radio/: Cargo.toml
radio/src/: audio.rs  error.rs  lib.rs  mode.rs  nav.rs  player.rs  power.rs  sleep.rs
radio/src/audio/: eq.rs  volume.rs  volume.rs.bak
radio/src/player/: info.rs  status.rs
remote/: Cargo.toml
remote-cli/: Cargo.toml
remote-cli/src/: cli.rs  config.rs  error.rs  main.rs
remote/src/: listener.rs  main.rs
