[package]
name = "fsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11" }
quick-xml = { version = "0.22" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
